--- a/source/draft/blog-test/20140416.md
+++ b/source/draft/blog-test/20140416.md
@@ -1,4 +1,4 @@
-## Project manager -- a brief sketch
+## Project manager: a brief sketch
 
 I work with multiple projects, all the time. And it's a great frustration that things become messy over time. In order to work full-time on an editor, projects must be managed directly from them, or close enough.
 
